; ModuleID = '/home/carl/AnghaBench/linux/drivers/mfd/extr_wm8997-tables.c_wm8997_patch.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mfd/extr_wm8997-tables.c_wm8997_patch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.arizona = type { i32, i32 }

@wm8997_reva_patch = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @wm8997_patch(%struct.arizona* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.arizona*, align 8
  store %struct.arizona* %0, %struct.arizona** %3, align 8
  %4 = load %struct.arizona*, %struct.arizona** %3, align 8
  %5 = getelementptr inbounds %struct.arizona, %struct.arizona* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %15 [
    i32 0, label %7
  ]

7:                                                ; preds = %1
  %8 = load %struct.arizona*, %struct.arizona** %3, align 8
  %9 = getelementptr inbounds %struct.arizona, %struct.arizona* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @wm8997_reva_patch, align 4
  %12 = load i32, i32* @wm8997_reva_patch, align 4
  %13 = call i32 @ARRAY_SIZE(i32 %12)
  %14 = call i32 @regmap_register_patch(i32 %10, i32 %11, i32 %13)
  store i32 %14, i32* %2, align 4
  br label %16

15:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %16

16:                                               ; preds = %15, %7
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}

declare dso_local i32 @regmap_register_patch(i32, i32, i32) #1

declare dso_local i32 @ARRAY_SIZE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
